[gd_scene load_steps=8 format=3 uid="uid://b0td5yoxb431c"]

[ext_resource type="Script" uid="uid://c43ig0gykkvm8" path="res://ShmupSandbox/UI/Scripts/audio_settings.gd" id="1_8stjm"]
[ext_resource type="FontFile" uid="uid://bqlkxtl2tvtig" path="res://ShmupSandbox/Assets/Fonts/puree____2.ttf" id="2_wywn7"]
[ext_resource type="FontFile" uid="uid://chyk1vw521kif" path="res://ShmupSandbox/Assets/Fonts/Metal Lord.otf" id="3_w8yk6"]
[ext_resource type="Texture2D" uid="uid://qusud1dgnpui" path="res://ShmupSandbox/Assets/Icons/ui_arrow_normal-v2.png" id="4_p2v0w"]
[ext_resource type="Texture2D" uid="uid://dto7f70dxk21" path="res://ShmupSandbox/Assets/Icons/ui_arrow_pressed-v2.png" id="5_elm84"]
[ext_resource type="Texture2D" uid="uid://ulo54d8qyr7o" path="res://ShmupSandbox/Assets/Icons/ui_arrow_hover-v2.png" id="6_7flyk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ycgb6"]

[node name="audio_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8stjm")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.133, 0.137, 0.137, 0.702)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_ycgb6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="audio_settings_label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_wywn7")
theme_override_font_sizes/font_size = 75
text = "Audio Settings"
horizontal_alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator6" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator7" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_master" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 2

[node name="master_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_master" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer_sound/sound_label")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "Master"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_master"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_master"]
layout_mode = 2

[node name="HBoxContainer_master_value" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_master" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value/VBoxContainer"]
layout_mode = 2

[node name="master_left_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value/VBoxContainer" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
texture_focused = ExtResource("6_7flyk")

[node name="master_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value" groups=["game_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "100%"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value/VBoxContainer2"]
layout_mode = 2

[node name="master_right_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_master/HBoxContainer_master_value/VBoxContainer2" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
flip_h = true

[node name="separator11" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_sound" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 2

[node name="sound_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_sound" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer_master/master_label")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer_music/music_label")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "Sound"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_sound"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_sound"]
layout_mode = 2

[node name="HBoxContainer_sound_value" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_sound" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value/VBoxContainer"]
layout_mode = 2

[node name="sound_left_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value/VBoxContainer" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
texture_focused = ExtResource("6_7flyk")

[node name="sound_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "100%"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value/VBoxContainer2"]
layout_mode = 2

[node name="sound_right_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_sound/HBoxContainer_sound_value/VBoxContainer2" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
flip_h = true

[node name="separator12" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_music" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 25
alignment = 2

[node name="music_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_music" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer_sound/sound_label")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../../HBoxContainer_back/back_button")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_music"]
layout_mode = 2

[node name="separator2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_music"]
layout_mode = 2

[node name="HBoxContainer_music_value" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_music" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value/VBoxContainer"]
layout_mode = 2

[node name="music_left_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value/VBoxContainer" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
texture_focused = ExtResource("6_7flyk")

[node name="music_value" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 30
text = "100%"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="separator" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value/VBoxContainer2"]
layout_mode = 2

[node name="music_right_button" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer_music/HBoxContainer_music_value/VBoxContainer2" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 12)
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
focus_mode = 0
action_mode = 0
texture_normal = ExtResource("4_p2v0w")
texture_pressed = ExtResource("5_elm84")
texture_hover = ExtResource("6_7flyk")
flip_h = true

[node name="separator4" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator5" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator8" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator9" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="separator10" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer_back" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 2

[node name="back_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer_back" groups=["audio_settings_ui_nodes"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../../HBoxContainer_music/music_label")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
theme_override_fonts/font = ExtResource("3_w8yk6")
theme_override_font_sizes/font_size = 35
action_mode = 0
text = "Back"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
